CMAKE_MINIMUM_REQUIRED(VERSION 3.20.0)

add_executable(001 001.cpp)
add_executable(002 002.cpp)
add_executable(003 003.cpp)
add_executable(004 004.cpp)
add_executable(005 005.cpp)
add_executable(006 006.cpp)
add_executable(007 007.cpp)
add_executable(008 008.cpp)
add_executable(009 009.cpp)
add_executable(024 024.cpp)
